--- a/package.json
+++ b/package.json
@@ -5,17 +5,28 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^42.0.2",
     "@ckeditor/ckeditor5-react": "^11.0.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.1",
+    "@mui/styles": "^6.5.0",
+    "@popperjs/core": "^2.11.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "cropperjs": "^2.0.1",
+    "get-orientation": "^1.1.2",
     "react": "^19.1.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
