--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@ckeditor/ckeditor5-react": "^11.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
     "@mui/material": "^7.3.1",
     "@mui/styles": "^6.5.0",
     "@popperjs/core": "^2.11.8",
