--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "baseline-browser-mapping": "^2.9.17",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "caniuse-lite": "^1.0.30001766",
     "cropperjs": "^2.0.1",
     "get-orientation": "^1.1.2",
     "react": "^19.1.0",
